def mainClassName = "pro.gravit.launchermodules.discordbot.DiscordBotModule"

sourceCompatibility = '17'
targetCompatibility = '17'

dependencies {
    implementation("net.dv8tion:JDA:5.0.0-alpha.17")
}

jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}
